tests/mvar/reject/mutual_recursion_a.nos
# expect: error
# Mutual recursion with mvar access - UNSAFE

mvar counter: Int = 0

ping(n) = {
    # UNSAFE: ping accesses counter, calls pong which also accesses counter
    if n <= 0 then {
        counter
    } else {
        counter = counter + 1
        pong(n - 1)
    }
}

pong(n) = {
    counter = counter + 1
    ping(n)
}

main() = {
    ping(5)
}
